--- a/.homeycompose/capabilities/flora_measure_fertility.json
+++ b/.homeycompose/capabilities/flora_measure_fertility.json
@@ -2,7 +2,8 @@
 	"type": "number",
 	"decimals": 2,
 	"title": {
-		"en": "Fertility"
+		"en": "Fertility",
+		"nl": "Vruchtbaarheid"
 	},
 	"units": {
 		"en": "µS/cm"
