--- a/.homeycompose/capabilities/flora_measure_moisture.json
+++ b/.homeycompose/capabilities/flora_measure_moisture.json
@@ -2,7 +2,8 @@
 	"type": "number",
 	"decimals": 2,
 	"title": {
-		"en": "Moisture"
+		"en": "Moisture",
+		"nl": "Vochtigheid"
 	},
 	"units": {
 		"en": "%"
