--- a/app.json
+++ b/app.json
@@ -28,6 +28,7 @@
       },
       "class": "sensor",
       "capabilities": [
+        "measure_battery",
         "measure_temperature",
         "measure_luminance",
         "flora_measure_moisture",
