--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "com.mi.flora",
-  "version": "1.1.0",
+  "version": "1.0.3",
   "compatibility": ">=1.5.0",
   "sdk": 2,
   "name": {
@@ -12,7 +12,9 @@
   "category": [
     "appliances"
   ],
-  "permissions": [],
+  "permissions": [
+    "homey:wireless:ble"
+  ],
   "images": {
     "large": "/assets/images/large.png",
     "small": "/assets/images/small.png"
